Fix random words css on mobile

--- a/koreanhandbook/scss/partials/_media-queries.scss
+++ b/koreanhandbook/scss/partials/_media-queries.scss
@@ -26,6 +26,9 @@
       .row__search .resultsCounter {
         margin-left: 0;
       }
+      .korean__container {
+        flex-direction: column-reverse;
+      }
     }
   }
 }
